--- a/styles/content.css
+++ b/styles/content.css
@@ -1,11 +1,8 @@
 section {
     min-height: 400px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     margin: auto;
-    border-bottom: 2px solid var(--crimson-carrot);
-    padding: 20px 10px 20px 10px;
+    border-bottom: 2px solid lightgray;
+    padding: min(5em, 8%)
 }
 
 section:last-child {
