--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,6 @@
 @import url('variables.css');
+@import url('animations.css');
+@import url('override.css');
 @import url('navigation.css');
 @import url('content.css');
 
