--- a/styles/override.css
+++ b/styles/override.css
@@ -1,3 +1,13 @@
+body.loading {
+    opacity: 0;
+    overflow: hidden;
+}
+
+body {
+    opacity: 1;
+    transition: opacity 0.3s ease-in;
+}
+
 h1 {
     font-size: 48px;
     margin-bottom: 1rem;
