first try with grid, need to add responsivness

--- a/styles/animations.css
+++ b/styles/animations.css
@@ -1,4 +1,4 @@
-@keyframes slideInFromLeft {
+@keyframes fadeInFromLeft {
   0% {
     transform: translateX(-50px);
     opacity: 0;
@@ -7,4 +7,23 @@
     transform: translateX(0);
     opacity: 1;
   }
+}
+
+@keyframes fadeInFromRight {
+  0% {
+    transform: translateX(50px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+.fade-in-left {
+    animation: 1s normal 0s 1 fadeInFromLeft;
+}
+
+.fade-in-right {
+    animation: 1s normal 0s 1 fadeInFromRight;
 }
