--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,5 @@
 @import url('variables.css');
+@import url('layout.css');
 @import url('animations.css');
 @import url('override.css');
 @import url('navigation.css');
