--- a/styles/content.css
+++ b/styles/content.css
@@ -16,4 +16,7 @@ section#main {
     height: 800px;
     margin-top: -50px;
     padding-top: 70px;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    gap: 1rem;
 }
