--- a/styles/content.css
+++ b/styles/content.css
@@ -21,8 +21,12 @@ section#main {
     background: url('../resources/images/conference-background.svg');
     background-size: cover;
     background-position: center top;
-    height: 800px;
+    min-height: 800px;
     margin-top: -50px;
     padding-top: 70px;
     display: grid;
+}
+
+section#main img {
+    max-width: 100%;
 }
