structure of sections contents

--- a/styles/content.css
+++ b/styles/content.css
@@ -3,12 +3,27 @@ section {
     margin: auto;
     border-bottom: 2px solid lightgray;
     padding: min(5em, 8%);
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns: 1fr;
     gap: 2rem;
+    display: grid;
+}
+
+.section-header {
+}
+
+.section-content {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 4rem;
 }
 
 @media(max-width: 1000px) {
     section {
+        grid-template-columns: 1fr;
+    }
+
+    .section-content {
+        display: grid;
         grid-template-columns: 1fr;
     }
 }
@@ -21,10 +36,9 @@ section#main {
     background: url('../resources/images/conference-background.svg');
     background-size: cover;
     background-position: center top;
-    min-height: 800px;
+    min-height: 600px;
     margin-top: -50px;
-    padding-top: 70px;
-    display: grid;
+    padding-top: 50px;
 }
 
 section#main img {
