--- a/styles/override.css
+++ b/styles/override.css
@@ -15,10 +15,20 @@ h1 {
 }
 
 h2 {
-    font-size: 32px;
+    font-size: 36px;
+    margin-bottom: 16px;
+}
+
+h3 {
+    font-size: 24px;
     margin-bottom: 0.25rem;
 }
 
-h2, h3 {
+h2, h3, p {
     color: var(--dark-gray);
+}
+
+p {
+    font-size: 1.5em;
+    margin-top: 0.5em;
 }
