--- a/styles/style.css
+++ b/styles/style.css
@@ -13,6 +13,10 @@ body {
     display: none;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 @media(max-width: 800px) {
     .hideOnMobile {
         display: none;
