whole new navbar with animations and shit

--- a/styles/navigation.css
+++ b/styles/navigation.css
@@ -1,16 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-}
-
-body {
-    min-height: 100vh;
-    background-repeat: no-repeat;
-    background-position: center;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    padding-top: 50px;
-}
-
 nav {
     /* background-color: white; */
     box-shadow: 3px 3px, 5px, rgba(0, 0, 0, 0.1);
@@ -21,8 +8,9 @@ nav {
     z-index: 100;
 }
 
-#top-nav {
-    background-color: var(--pastel-beige);
+#open-sidebar-button, #close-sidebar-button {
+    z-index: 90;
+    display: none;
 }
 
 nav ul {
@@ -48,7 +36,7 @@ nav a {
     position: relative;
 }
 
-#top-nav a::after {
+nav a::after {
     content: '';
     background-color: black;
     height: 3px;
@@ -61,38 +49,74 @@ nav a {
     border-radius: 1px;
 }
 
-#top-nav a:hover:after {
-    width: 100%;
-    transition-duration: 150ms;
-}
 
-.sidebar {
-    position: fixed;
-    top: 0;
-    right: 0;
-    height: 100vh;
-    width: 250px;
-    z-index: 999;
-    background-color: rgba(255, 255, 255, 0.2);
-    backdrop-filter: blur(10px);
-    box-shadow: -10px 0 10px rgba(0, 0, 0, 0.1);
-    display: none;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
-
-}
-
-.sidebar li {
-    width: 100%;
-}
-
-.sidebar li a{
-    width: 100%;
-}
-
-@media(max-width: 400px) {
-    .sidebar {
+@media screen and (min-width: 1001px){
+    nav a:hover:after {
         width: 100%;
+        transition-duration: 150ms;
+    }
+}
+
+div#overlay {
+    position: fixed;
+    background: rgba(0, 0, 0, 0);
+    inset: 0;
+    z-index: 80;
+    opacity: 0;
+    pointer-events: none;
+    transition: background 300ms ease-out, opacity 300ms ease-out;
+}
+
+
+@media screen and (max-width: 1000px) {
+    nav {
+        position: fixed;
+        top: 0;
+        right: -100%;
+        height: 100vh;
+        width: min(15em, 100%);
+        border-left: 1px solid lightgray;
+        background: var(--light-beige);
+        backdrop-filter: blur(10px);
+        transition: right 300ms ease-out;
+    }
+
+    nav li a:hover {
+        background: var(--beige);
+        transition-duration: 0.3s;
+    }
+
+    nav.show {
+        right: 0;
+    }
+
+    nav ul {
+        width: 100%;
+        flex-direction: column;
+    }
+
+    nav a, nav li {
+        width: 100%;
+    }
+
+    #open-sidebar-button {
+        display: block;
+        position: fixed;
+        right: 20px;
+        top: 20px;
+        background: none;
+        border: none;
+        cursor: pointer;
+    }
+
+    #close-sidebar-button {
+        display: block;
+        cursor: pointer;
+    }
+
+    #overlay.show {
+        opacity: 1;
+        pointer-events: auto;
+        background: rgba(0, 0, 0, 0.5);
     }
 }
