--- a/styles/override.css
+++ b/styles/override.css
@@ -22,19 +22,19 @@ body {
 }
 
 h1 {
-    font-size: 48px;
+    font-size: 3em;
     margin-bottom: 1rem;
     color: var(--darker-gray);
 }
 
 h2 {
-    font-size: 36px;
-    margin-bottom: 16px;
+    font-size: 2em;
+    margin-bottom: 1em;
 }
 
 h3 {
-    font-size: 24px;
-    margin-bottom: 0.25rem;
+    font-size: 1.5em;
+    margin-bottom: 0.5em;
 }
 
 h2, h3, p {
